<resources>
    <string name="app_name">Wyromed</string>
    <string name="todo">todo</string>
    <string name="btn_signup_on_boarding">Sign Up</string>
    <string name="btn_signin_on_boarding">Sign In</string>
    <string name="com_auth0_client_id">YOUR_CLIENT_ID</string>
    <string name="com_auth0_domain">YOUR_DOMAIN</string>
    <string name="hello_first_fragment">Hello World!!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="action_settings">Setting</string>
    <string name="first_fragment_label">Fragment 1</string>
    <string name="second_fragment_label">Fragment 2</string>
    <string name="title_sign_in">Sign In</string>
    <string name="hint_username_login">Username</string>
    <string name="hint_identity_login">Email</string>
    <string name="hint_password_login">Password</string>
    <string name="btn_forget_password">Forget Password ?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="no_account_yet">No account yet ?</string>
    <string name="didn_t_receive_the_link">Didn\'t receive the email?</string>
    <string name="to_sign_up">Sign Up</string>
    <string name="resend">Resend</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="hint_username_register">Username</string>
    <string name="hint_fullname_register">Fullname</string>
    <string name="hint_email_register">Email</string>
    <string name="hint_no_handphone_register">No. Handphone</string>
    <string name="hint_password_register">Password</string>
    <string name="hint_cpassword_register">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="to_sign_in">Sign In</string>
    <string name="title_forgot_password">Forgot Password ?</string>
    <string name="enter_your_registered_email_below_to_receive_password_reset_instruction">Enter your registered email below to receive password reset instruction</string>
    <string name="email_forgot_password">Email</string>
    <string name="btn_send">Send</string>
    <string name="title_check_your_email">Check your email</string>
    <string name="we_have_sent_a_password_recovery_instruction_to_your_email">We have sent a password recovery instruction to your email</string>
    <string name="btn_oke">Sign In</string>
    <string name="title_create_new_password">Create new password</string>
    <string name="your_new_password_must_be_different_from_previously_used_passwords">Your new password must be different from previously used passwords</string>
    <string name="new_password_forgot">New Password</string>
    <string name="repeat_password_forgot">Repeat Password</string>
    <string name="btn_create_new_password">Create</string>
    <string name="title_success">Success !!!</string>
    <string name="your_password_has_been_changed">Your password has been changed</string>
    <string name="btn_login_to_my_account">Login to My Account</string>
    <string name="discover_your">Discover your</string>
    <string name="medical_device">medical device</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="history_menu">History Transactions</string>
    <string name="setting_menu">Settings</string>
    <string name="help_menu">Help and Support</string>
    <string name="privacy_policy_menu">Privacy Policy</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="username_set_profile">Username</string>
    <string name="email_set_profile">Email</string>
    <string name="upload_foto_profile">Upload</string>
    <string name="hint_fullname_edit">Fullname</string>
    <string name="hint_email_edit">Email</string>
    <string name="hint_no_handphone_edit">No. Handphone</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="title_message">Message</string>
    <string name="delete">Delete</string>
    <string name="tb_field_nama_barang">Nama Barang</string>
    <string name="tb_field_jumlah">Jumlah</string>
    <string name="btn_cancel_message">Cancel</string>
    <string name="btn_confirm_message">Confirm</string>
    <string name="btn_check_message">Check</string>
    <string name="title_tanggal_pesanan">Tanggal Pesanan :</string>
    <string name="title_nomor_pesanan">Nomor Pesanan :</string>
    <string name="title_status_pesanan">Status Pesanan :</string>
    <string name="tv_tanggal_pesanan">12 Desember 2020</string>
    <string name="tv_nomor_pesanan">BK-001</string>
    <string name="tv_status_pesanan">Ready</string>
    <string name="tv_kategori_message">Barang</string>
    <string name="tv_judul_keterangan_message_1">Pesanan RS Omni Pulomas</string>
    <string name="tv_waktu_message_1">12 Desember 2020, 17:45</string>
    <string name="tb_field_status">Status</string>
    <string name="tb_field_stok_awal">Stok Awal</string>
    <string name="tb_field_stok_akhir">Stok Akhir</string>
    <string name="tv_judul_keterangan_message_2">Pengurangan Stok</string>
    <string name="tv_waktu_message_2">24 July 2020, 14:37</string>
    <string name="tv_title_tgl_pengajuan">Tanggal Pengajuan :</string>
    <string name="tv_tgl_pengajuan">23 July 2020</string>
    <string name="tv_title_nomor_pengajuan">Nomor Pengajuan :</string>
    <string name="tv_no_pengajuan">A-0119</string>
    <string name="tv_title_disetujui_oleh">Disetujui Oleh :</string>
    <string name="tv_disetujui_oleh">Danang Iswanto</string>
    <string name="tv_nama_kategori_stok_barang">Stok Barang</string>
    <string name="title_booking">Booking</string>
    <string name="form_detail">Form Detail</string>
    <string name="rental_item">Rental Item</string>
    <string name="select_item">Select Item</string>
    <string name="purchased_item">BMHP Item</string>
    <string name="status">Status</string>
    <string name="finish">Finish</string>
    <string name="title_form_detail1">Your Medical Devices</string>
    <string name="title_form_detail2">Booking Form</string>
    <string name="hospital">Hospital</string>
    <string name="patient">Patient</string>
    <string name="add_patient">Add Patient</string>
    <string name="select_patient">Select Patient</string>
    <string name="list_patient">List Patient</string>
    <string name="medical">Medical Record</string>
    <string name="payment">Payment Status</string>
    <string name="step1">Form Detail</string>
    <string name="step2">Rental Item</string>
    <string name="step3">Purchased Item</string>
    <string name="step4">Status</string>
    <string name="step5">Finish</string>
    <string name="operation">Operation</string>
    <string name="item">Item</string>
    <string name="date">Date</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="time">Time</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="qty">Qty</string>
    <string name="pcs">pcs</string>
    <string name="wib">WIB</string>
    <string name="app_bar_sales_order">Sales Order</string>
    <string name="payment_status_sales_order">Payment Status</string>
    <string name="payment_method_sales_order">Payment Method</string>
    <string name="due_date_sales_order">Due Date</string>
    <string name="tv_select_patient">-Select-</string>
    <string name="tv_empty">~empty~</string>
    <string name="hint_select_payment_method">-Select-</string>
    <string name="hint_select_due_date">-Select-</string>
    <string name="btn_finish_so">Finish</string>
    <string name="btn_send_so">Send</string>
    <string name="app_bar_detail_sales">Detail Sales</string>
    <string name="title_detail_sales">Detail Sales</string>
    <string name="date_detail_sales">Date</string>
    <string name="hospital_detail_sales">Hospital</string>
    <string name="patient_name_detail_sales">Patient Name</string>
    <string name="medical_record_detail_sales">Medical Record</string>
    <string name="payment_status_detail_sales">Payment Status</string>
    <string name="payment_method_detail_sales">Payment Method</string>
    <string name="title_rental_item_detail_sales">Rental Item</string>
    <string name="title_purchased_item_detail_sales">Purchased Item</string>
    <string name="title_total_price_detail_sales">Total Price</string>
    <string name="medrec">Medical Record</string>
    <string name="search_patient">Search Patient</string>
    <string name="patient_name">Patient Name</string>
    <string name="medical_record">Medical Record</string>
    <string name="payment_status">Patient Status</string>
    <string name="no_bpjs">No. BPJS</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
    <string name="item_name">Item Name</string>
    <string name="add_item">Add Item</string>
    <string name="clear">Clear</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="number_amount">1</string>
    <string name="app_bar_stock">Stock</string>
    <string name="your_stock">Your Warehouse Stock</string>
    <string name="satuan_pcs">Pcs</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_medical_device">Medical Device</string>
    <string name="tv_inventory_stock">Inventory Stock :</string>
    <string name="title_qty_stock">Stock</string>
    <string name="number_qty">0</string>
    <string name="tv_title_amount_qty">Amount</string>
    <string name="tv_title_status_accepted">Status</string>
    <string name="tv_title_operation">Operation</string>
    <string name="tv_countdown">00:00</string>
    <string name="tv_start">START</string>
    <string name="tv_accepted">ACCEPTED</string>
    <string name="app_bar_stock_request">Stock Request</string>
    <string name="no_data_available">No Item</string>
    <string name="tv_dialog_no_request">No. Request</string>
    <string name="your_submission_for_additional_stock_has_been_submitted">Your submission for additional stock has been submitted</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_submit_again">Submit Different Request</string>
    <string name="tv_dialog_booked">Booked</string>
    <string name="your_booking_submitted">Congrats Your Booking has been submitted</string>
    <string name="app_bar_in_use">Operation</string>
    <string name="btn_add_item_purchased">Add Item</string>
    <string name="btn_finish">Finish</string>
    <string name="app_bar_finishing">Finishing</string>
    <string name="btn_submit_sales">Submit</string>
    <string name="app_bar_receipt">Receipt</string>
    <string name="btn_create">Create</string>
    <string name="app_bar_sales">Sales</string>
    <string name="no_order_sales">No. Order</string>
    <string name="app_bar_handover">Handover</string>
    <string name="app_bar_confirmation">Confirmation</string>
    <string name="order_status_rental">Order Status</string>
    <string name="title_order_rental_item">Rental Item</string>
    <string name="order_status_purchased">Order Status</string>
    <string name="title_order_purchased_item">BMHP Item</string>
    <string name="btn_accept_order">Accept</string>
    <string name="btn_start_operation">Start</string>
    <string name="ordered">Ordered</string>
    <string name="day">Monday</string>
    <string name="date_number">30</string>
    <string name="month">December</string>
    <string name="no_order">No. Order</string>
    <string name="title_select_payment_method">Select Payment Method</string>
    <string name="rd_cash">Cash</string>
    <string name="rd_credit">Credit</string>
    <string name="btn_choose_payment">Choose</string>
</resources>