<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/container_border_bottom"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_detail_booking_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/item_name"
        android:textColor="@color/colorGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_detail_booking_item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/qty"
        android:textColor="@color/colorGrey"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_booking_item_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_detail_booking_ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/pcs"
        android:textColor="@color/colorGrey"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_booking_item_qty"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_booking_item_name"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_detail_booking_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:gravity=""
        android:text="@string/date"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_detail_booking_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/time"
        android:textColor="@color/colorGrey"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_booking_ext_hours"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_booking_date"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_detail_booking_ext_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/wib"
        android:textColor="@color/colorGrey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_booking_date"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>