<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light"
    android:gravity="center_horizontal"
    tools:context=".Activity.CheckEmailActivity">

    <ImageView
        android:layout_width="236dp"
        android:layout_height="236dp"
        android:src="@drawable/icon_ilustration_check"
        android:contentDescription="@string/todo"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_check_your_email"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/colorGreen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/we_have_sent_a_password_recovery_instruction_to_your_email"
        android:textSize="17sp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorGray"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_btn_oke"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="108dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="1dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_no_account_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/didn_t_receive_the_link"
                android:textColor="@color/colorDarkGrey"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv_no_account_yet"
                android:background="@color/transparant"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_bold"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/resend"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_countdown_timer_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/btn_resend"
                android:fontFamily="@font/montserrat_regular"
                android:text="15"
                android:textColor="@color/colorDarkGrey"
                android:textSize="14sp" />
        </RelativeLayout>

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/layout_btn_oke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:neomorph_view_type="rectangular"
            app:neomorph_shadow_type="outer"
            app:neomorph_elevation="6dp"
            app:neomorph_corner_radius="25dp"
            app:neomorph_highlight_color="@color/neomorph_highlight_color"
            app:neomorph_background_color="@color/light"
            app:neomorph_shadow_color="@color/neomorph_shadow_color">

            <Button
                android:id="@+id/btn_oke"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/bg_button_circle_green"
                android:text="@string/btn_oke"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_regular"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:focusable="true" />

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    </RelativeLayout>

</LinearLayout>