<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light"
    android:gravity="center_horizontal"
    tools:context=".Activity.ForgotPasswordActivity">

    <ImageView
        android:layout_width="236dp"
        android:layout_height="236dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_ilustration_forgot"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_forgot_password"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/colorGreen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/enter_your_registered_email_below_to_receive_password_reset_instruction"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorGray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="28dp"
        android:padding="10dp">

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/layout_email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:neomorph_shadow_type="outer"
            app:neomorph_corner_radius="25dp"
            app:neomorph_elevation="6dp"
            app:neomorph_view_type="rectangular"
            app:neomorph_shadow_color="@color/neomorph_shadow_color"
            app:neomorph_highlight_color="@color/neomorph_highlight_color"
            app:neomorph_background_color="@color/light">

            <EditText
                android:id="@+id/et_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/container_edit_text"
                android:hint="@string/email_forgot_password"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:textColor="@color/colorGreen"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="" />

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/layout_btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:neomorph_view_type="rectangular"
            app:neomorph_shadow_type="outer"
            app:neomorph_elevation="6dp"
            app:neomorph_corner_radius="25dp"
            app:neomorph_highlight_color="@color/neomorph_highlight_color"
            app:neomorph_background_color="@color/light"
            app:neomorph_shadow_color="@color/neomorph_shadow_color">

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/bg_button_circle_green"
                android:text="@string/btn_send"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_regular"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:focusable="true" />

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    </RelativeLayout>

</LinearLayout>