<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:radius="35dp"
    android:background="@drawable/bg_spinner_dialog">

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="fill_parent"
        android:layout_height="42.5dp"
        android:background="@drawable/container_border"
        android:paddingStart="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_dialog_patient"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fontFamily="@font/lato_bold"
            android:paddingLeft="10dp"
            android:paddingTop="6dp"
            android:text="@string/list_patient"
            android:textColor="@color/colorGreySolid"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/icon_add"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button_circle_green"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_add" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_head"
        android:background="@drawable/container_border">

        <EditText
            android:id="@+id/edt_search_patient"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:maxLength="20"
            android:background="@drawable/container_edit_text"
            android:hint="@string/search_patient"
            android:inputType="text"
            android:paddingStart="19dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorGreen"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_search"
        android:background="@drawable/container_border">

        <TextView
            android:id="@+id/list_patient_head"
            android:layout_width="fill_parent"
            android:layout_height="42.5dp"
            android:fontFamily="@font/lato_regular"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="Nama Item"
            android:textAlignment="textStart"
            android:textColor="@color/colorGreySolid"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>

